Back up my www.attractiveboy.top blog

--- a/source/_posts/被讨厌的勇气.md
+++ b/source/_posts/被讨厌的勇气.md
@@ -8,6 +8,8 @@ categories: novel
 
 ### 你之所以无法改变，是因为自己下了“不改变”的决心。
 
+<!--more-->
+
 ### 即使人们有各种不满，但还是认为保持现状更轻松更安心。
 
 ###  你之所以不幸并不是因为过去或者环境，更不是因为能力不足，你只不过缺乏”勇气“，可以说是”缺乏获得幸福的勇气“。
