Back up my www.attractiveboy.top blog

--- a/source/_posts/轮播图.md
+++ b/source/_posts/轮播图.md
@@ -2,10 +2,9 @@
 title: '焦点轮播图'
 date: 2021-08-21 23:25:37
 tags:
-    - css
-    - html
-    - jqurey
-categories: Bootstrap
+    - CSS
+    - HTML
+    - jQuery
 ---
 ## 准备
 > 本方法基于bootstrap，首先需要引入[bootstrap4](https://github.com/twbs/bootstrap/releases/download/v4.6.0/bootstrap-4.6.0-dist.zip)，然后在需要使用bootstrap样式和方法的元素用一个`<div class="container"></div>`包裹起来。
